--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
   fast_finish: true
   include:
   - php: 7.2
-    env: UNIT_TESTS=yes PHP_LINT=yes
+    env: UNIT_TESTS=yes PHP_LINT=yes PHP_CS_FIXER=yes
 sudo: false
 
 addons:
@@ -19,13 +19,20 @@ cache:
 before_script:
 - phpenv config-rm xdebug.ini
 - composer install --no-interaction 
+- mkdir -p logs
 
 script:
 - |
   if [[ "$UNIT_TESTS" == "yes" ]]; then
     echo;
     echo "Running unit tests";
-    ./bin/phpunit -c Build/UnitTests.xml
+    composer t3g:test:php:unit
+  fi
+- |
+  if [[ "$PHP_CS_FIXER" == "yes" ]]; then
+    echo;
+    echo "Running PHP CS Fixer";
+    composer t3g:cgl
   fi
 - |-
   if [[ "$PHP_LINT" == "yes" ]]; then
