--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
 		"typo3fluid/fluid": "^2.3"
 	},
 	"require-dev": {
+		"friendsofphp/php-cs-fixer": "^2.12",
 		"roave/security-advisories": "dev-master",
 		"typo3/testing-framework": "dev-master"
 	},
@@ -40,6 +41,9 @@
 		],
 		"t3g:test": [
 			"@t3g:test:php:unit"
+		],
+		"t3g:cgl": [
+			"php-cs-fixer fix --config Build/.php_cs.dist --format=junit > logs/php-cs-fixer.xml"
 		]
 	},
 	"extra": {
