--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,12 @@
 		"t3g:test:php:unit": [
 			"phpunit -c Build/UnitTests.xml --log-junit logs/phpunit.xml"
 		],
+		"t3g:test:php:functional": [
+			"phpunit -c Build/FunctionalTests.xml --log-junit logs/phpunit_functionals.xml"
+		],
 		"t3g:test": [
-			"@t3g:test:php:unit"
+			"@t3g:test:php:unit",
+			"@t3g:test:php:functional"
 		],
 		"t3g:cgl": [
 			"php-cs-fixer fix --config Build/.php_cs.dist --format=junit > logs/php-cs-fixer.xml"
