[TASK] Make FileList functional

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ bin/
 var/
 logs/
 index.php
+
+# Vue
+Resources/Public/JavaScript/Library/demo.html
+Resources/Public/JavaScript/Library/filelist.common.js
+Resources/Public/JavaScript/Library/*hot-update.js
+Resources/Public/JavaScript/Library/*hot-update.json
