--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
 		}
 	],
 	"require": {
+		"ext-zip": "*",
 		"psr/http-message": "^1.0.0",
 		"typo3/cms-backend": "10.*.*@dev",
 		"typo3/cms-core": "10.*.*@dev",
