--- a/.travis.yml
+++ b/.travis.yml
@@ -1,48 +1,46 @@
+# .travis.yml
+sudo: false
 language: php
 
-matrix:
-  fast_finish: true
-  include:
-  - php: 7.2
-    env: UNIT_TESTS=yes FUNCTIONAL_TESTS=yes PHP_LINT=yes PHP_CS_FIXER=yes
-sudo: false
+php:
+  - 7.2
+
+env:
+  - TYPO3_VERSION=^9
+  - TYPO3_VERSION=dev-master
 
 addons:
   apt:
     packages:
-    - parallel
+      - parallel
 
-cache:
-  directories:
-  - $HOME/.composer/cache
-
-before_script:
-- phpenv config-rm xdebug.ini
-- composer install --no-interaction 
-- mkdir -p logs
+install:
+  - composer require typo3/minimal:${TYPO3_VERSION}
+  - git checkout composer.json
+  - export TYPO3_PATH_WEB="$PWD/.build/web"
 
 script:
-- |
-  if [[ "$UNIT_TESTS" == "yes" ]]; then
+  - >
     echo;
     echo "Running unit tests";
     composer test:php:unit
-  fi
-- |
-  if [[ "FUNCTIONAL_TESTS" == "yes" ]]; then
+
+  - >
     echo;
     echo "Running functional tests";
     composer test:php:functional
-  fi
-- |
-  if [[ "$PHP_CS_FIXER" == "yes" ]]; then
+
+  - >
     echo;
-    echo "Running PHP CS Fixer";
-    composer cgl
-  fi
-- |-
-  if [[ "$PHP_LINT" == "yes" ]]; then
-      echo;
-      echo "Running php lint";
-      find . -name \*.php -not -path "./vendor/*" | parallel --gnu php -d display_errors=stderr -l {} > /dev/null \;
-  fi
+    echo "PHP lint";
+    find . -name \*.php ! -path "./.build/*" | parallel --gnu php -d display_errors=stderr -l {} > /dev/null \;
+
+jobs:
+  include:
+    - stage: quality
+      php: 7.2
+      script: ./.build/bin/php-cs-fixer --diff --dry-run -v fix
+
+cache:
+  directories:
+    - $HOME/.composer/cache
