--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
 	"require-dev": {
 		"friendsofphp/php-cs-fixer": "^2.12",
 		"roave/security-advisories": "dev-master",
-		"typo3/testing-framework": "dev-master"
+		"typo3/testing-framework": "^4.9 || ^5.0"
 	},
 	"autoload": {
 		"psr-4": {
