--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
 			"@test:php:functional"
 		],
 		"cgl": [
-			"php-cs-fixer fix --config Build/.php_cs.dist --format=junit > logs/php-cs-fixer.xml"
+			"php-cs-fixer fix --config Build/.php_cs.dist"
 		],
 		"post-autoload-dump": [
 			"mkdir -p .build/web/typo3conf/ext/",
