--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -64,6 +64,7 @@ return PhpCsFixer\Config::create()
     ])
     ->setFinder(
         PhpCsFixer\Finder::create()
-            ->in('.')
-	    ->exclude(['bin', 'public', 'vendor'])
+            ->exclude('.build')
+            ->exclude('var')
+            ->in(__DIR__)
     );
