--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ jobs:
   include:
     - stage: quality
       php: 7.2
-      script: ./.build/bin/php-cs-fixer --diff --dry-run -v fix
+      script: composer cgl
 
 cache:
   directories:
