--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,27 @@
-# PHPStorm
-.idea
+# Build
+/.build
+
+# IDE
+/.idea
+/.vscode
 
 # OSX
-.DS_Store
+/.DS_Store
+
+# Development
+/.ddev
 
 # Composer
-vendor/
-bin/
+/composer.lock
 
 # TYPO3 test
-.php_cs.cache
-/public/
-/typo3/
-var/
-logs/
-index.php
+/.php_cs.cache
+/var/
+/logs/
 
 # Vue
-Resources/Public/JavaScript/Library/demo.html
-Resources/Public/JavaScript/Library/filelist.common.js
-Resources/Public/JavaScript/Library/filelist.common.js.map
-Resources/Public/JavaScript/Library/*hot-update.js
-Resources/Public/JavaScript/Library/*hot-update.json
+/Resources/Public/JavaScript/Library/demo.html
+/Resources/Public/JavaScript/Library/filelist.common.js
+/Resources/Public/JavaScript/Library/filelist.common.js.map
+/Resources/Public/JavaScript/Library/*hot-update.js
+/Resources/Public/JavaScript/Library/*hot-update.json
