[TASK] Enable javascript analysis in scrutinizer

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -9,6 +9,7 @@ build:
       tests:
         override:
           - php-scrutinizer-run
+          - js-scrutinizer-run
   tests:
     override:
       -
