[TASK] Implement creation of zip archives for multiple files and folders
Fixes #92

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
 		}
 	],
 	"require": {
+		"ext-zip": "*",
 		"psr/http-message": "^1.0.0",
 		"typo3/cms-backend": "^9.5.5 || 10.0.*@dev",
 		"typo3/cms-core": "^9.5.5 || 10.0.*@dev",
